samples/_failures_safe/1761428756_172391_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5edeb9cd.c: In function ‘main’:
./samples/SAFE/__tmp_5edeb9cd.c:135: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_5edeb9cd.c:134:16: note: to match this ‘(’
  134 |         fprintf(stderr
      |                ^
./samples/SAFE/__tmp_5edeb9cd.c:134:9: error: too few arguments to function ‘fprintf’
  134 |         fprintf(stderr
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_5edeb9cd.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_5edeb9cd.c:134:9: error: expected declaration or statement at end of input
  134 |         fprintf(stderr
      |         ^~~~~~~
./samples/SAFE/__tmp_5edeb9cd.c:134:9: error: expected declaration or statement at end of input
